[gd_scene load_steps=11 format=1]

[ext_resource path="res://sources/scripts/levels/level.gd" type="Script" id=1]
[ext_resource path="res://sources/scenes/controls_hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://sources/assets/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://sources/scenes/control_changer.tscn" type="PackedScene" id=4]
[ext_resource path="res://sources/scenes/player/buttbutt.tscn" type="PackedScene" id=5]
[ext_resource path="res://sources/scenes/levels/death_zone.tscn" type="PackedScene" id=6]
[ext_resource path="res://sources/scenes/exit.tscn" type="PackedScene" id=7]
[ext_resource path="res://sources/scenes/menu_screen.tscn" type="PackedScene" id=8]
[ext_resource path="res://sources/scenes/game_over.tscn" type="PackedScene" id=9]
[ext_resource path="res://sources/scenes/success.tscn" type="PackedScene" id=10]

[node name="tiled_level" type="Node"]

script/script = ExtResource( 1 )

[node name="controls_hud" parent="." instance=ExtResource( 2 )]

[node name="tilemaps" type="Node" parent="."]

[node name="back_objects" type="TileMap" parent="tilemaps"]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 0
collision/mask = 0
occluder/light_mask = 1
tile_data = IntArray(  )
__meta__ = { "_edit_lock_":true }

[node name="control_changers" type="Node" parent="tilemaps/back_objects"]

[node name="control_changer" parent="tilemaps/back_objects/control_changers" instance=ExtResource( 4 )]

transform/pos = Vector2( 175, 525 )

[node name="objects" type="TileMap" parent="tilemaps"]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -7, 26, -6, 26, -5, 26, -4, 26, -3, 26, -2, 26, -1, 26, -65536, 26, -65535, 24, 65529, 9, 65530, 9, 65531, 9, 65532, 9, 65533, 9, 65534, 9, 65535, 9, 0, 9, 131065, 9, 131066, 9, 131067, 9, 131068, 9, 131069, 9, 131070, 9, 131071, 9, 65536, 9, 196600, 82, 196601, 9, 196602, 9, 196603, 9, 196604, 9, 196605, 9, 196606, 9, 196607, 9, 131072, 9, 131073, 80, 262136, 65, 262137, 9, 262138, 9, 262139, 9, 262140, 9, 262141, 9, 262142, 9, 262143, 9, 196608, 9, 327672, 65, 327673, 9, 327674, 9, 327675, 9, 327676, 9, 327677, 9, 327678, 9, 327679, 9, 262144, 9, 393208, 65, 393209, 9, 393210, 9, 393211, 9, 393212, 9, 393213, 9, 393214, 9, 393215, 9, 327680, 9, 458744, 65, 458745, 9, 458746, 9, 458747, 9, 458748, 9, 458749, 9, 458750, 9, 458751, 9, 393216, 9, 524280, 65, 524281, 9, 524282, 9, 524283, 9, 524284, 9, 524285, 9, 524286, 9, 524287, 9, 458752, 9, 458767, 6, 589816, 65, 589817, 9, 589818, 9, 589819, 9, 589820, 9, 589821, 9, 589822, 9, 589823, 9, 524288, 9, 524289, 26, 524290, 26, 524291, 26, 524292, 26, 524293, 26, 524294, 26, 524295, 26, 524296, 26, 524297, 26, 524298, 26, 524299, 26, 524300, 26, 524301, 26, 524302, 26, 524303, 26, 524304, 32, 524305, 32, 524306, 32, 524307, 32, 524308, 32, 524309, 32, 524310, 32, 524311, 32, 524312, 32, 524313, 32, 655352, 65, 655353, 9, 655354, 9, 655355, 9, 655356, 9, 655357, 9, 655358, 9, 655359, 9, 589824, 9, 589825, 9, 589826, 9, 589827, 9, 589828, 9, 589829, 9, 589830, 9, 589831, 9, 589832, 9, 589833, 9, 589834, 9, 589835, 9, 589836, 9, 589837, 9, 589838, 9, 589839, 9, 589840, 30, 589841, 30, 589842, 30, 589843, 30, 589844, 30, 589845, 30, 589846, 30, 589847, 30, 589848, 30, 589849, 30, 720888, 65, 720889, 9, 720890, 9, 720891, 9, 720892, 9, 720893, 9, 720894, 9, 720895, 9, 655360, 9, 655361, 9, 655362, 9, 655363, 9, 655364, 9, 655365, 9, 655366, 9, 655367, 9, 655368, 9, 655369, 9, 655370, 9, 655371, 9, 655372, 9, 655373, 9, 655374, 9, 655375, 9, 655376, 30, 655377, 30, 655378, 30, 655379, 30, 655380, 30, 655381, 30, 655382, 30, 655383, 30, 655384, 30, 655385, 30, 786424, 150, 786425, 37, 786426, 37, 786427, 37, 786428, 37, 786429, 37, 786430, 37, 786431, 37, 720896, 37, 720897, 37, 720898, 37, 720899, 37, 720900, 37, 720901, 37, 720902, 37, 720903, 37, 720904, 37, 720905, 37, 720906, 37, 720907, 37, 720908, 37, 720909, 37, 720910, 37, 720911, 37, 720912, 30, 720913, 30, 720914, 30, 720915, 30, 720916, 30, 720917, 30, 720918, 30, 720919, 30, 720920, 30, 720921, 30, 851960, 150, 851961, 37, 851962, 37, 851963, 37, 851964, 37, 851965, 37, 851966, 37, 851967, 37, 786432, 37, 786433, 37, 786434, 37, 786435, 37, 786436, 37, 786437, 37, 786438, 37, 786439, 37, 786440, 37, 786441, 37, 786442, 37, 786443, 37, 786444, 37, 786445, 37, 786446, 37, 786447, 37, 786448, 30, 786449, 30, 786450, 30, 786451, 30, 786452, 30, 786453, 30, 786454, 30, 786455, 30, 786456, 30, 786457, 30, 917496, 150, 917497, 37, 917498, 37, 917499, 37, 917500, 37, 917501, 37, 917502, 37, 917503, 37, 851968, 37, 851969, 37, 851970, 37, 851971, 37, 851972, 37, 851973, 37, 851974, 37, 851975, 37, 851976, 37, 851977, 37, 851978, 37, 851979, 37, 851980, 37, 851981, 37, 851982, 37, 851983, 37, 851984, 30, 851985, 30, 851986, 30, 851987, 30, 851988, 30, 851989, 30, 851990, 30, 851991, 30, 851992, 30, 851993, 30, 983033, 37, 983034, 37, 983035, 37, 983036, 37, 983037, 37, 983038, 37, 983039, 37, 917504, 37, 917505, 37, 917506, 37, 917507, 37, 917508, 37, 917509, 37, 917510, 37, 917511, 37, 917512, 37, 917513, 37, 917514, 37, 917515, 37, 917516, 37, 917517, 37, 917518, 37, 917519, 37, 917520, 30, 917521, 30, 917522, 30, 917523, 30, 917524, 30, 917525, 30, 917526, 30, 917527, 30, 917528, 30, 917529, 30 )
__meta__ = { "_edit_lock_":true }

[node name="buttbutt" parent="tilemaps/objects" instance=ExtResource( 5 )]

transform/pos = Vector2( 176, 510 )

[node name="Camera2D" type="Camera2D" parent="tilemaps/objects/buttbutt"]

transform/pos = Vector2( -1, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/smoothed = false
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="front_objects" type="TileMap" parent="tilemaps"]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 458755, 36, 458765, 34, 524295, 76, 524296, 95, 524297, 95, 524298, 95, 524299, 82, 589831, 65, 589832, 93, 589833, 93, 589834, 93, 589835, 65, 655367, 65, 655368, 93, 655369, 93, 655370, 93, 655371, 65 )
__meta__ = { "_edit_lock_":true }

[node name="death_zones" type="Node" parent="."]

[node name="death_zone" parent="death_zones" instance=ExtResource( 6 )]

transform/pos = Vector2( 778, 983.929 )
transform/scale = Vector2( 85.0625, 4.49778 )

[node name="climb_areas" type="Node" parent="."]

[node name="exit_areas" type="Node" parent="."]

[node name="exit" parent="exit_areas" instance=ExtResource( 7 )]

transform/pos = Vector2( 1103, 452 )

[node name="menu_screen" parent="." instance=ExtResource( 8 )]

[node name="game_over_screen" parent="." instance=ExtResource( 9 )]

[node name="success_screen" parent="." instance=ExtResource( 10 )]

[connection signal="controls_changed" from="tilemaps/objects/buttbutt" to="controls_hud" method="_on_buttbutt_controls_changed"]

[connection signal="die" from="tilemaps/objects/buttbutt" to="." method="_on_buttbutt_die"]

[connection signal="exit" from="tilemaps/objects/buttbutt" to="." method="_on_buttbutt_exit"]

[connection signal="menu" from="menu_screen" to="." method="_on_menu_screen_menu"]

[connection signal="pause" from="menu_screen" to="." method="_on_menu_screen_pause"]

[connection signal="restart" from="menu_screen" to="." method="_on_menu_screen_restart"]

[connection signal="menu" from="game_over_screen" to="." method="_on_menu_screen_menu"]

[connection signal="pause" from="game_over_screen" to="." method="_on_menu_screen_pause"]

[connection signal="restart" from="game_over_screen" to="." method="_on_menu_screen_restart"]

[connection signal="menu" from="success_screen" to="." method="_on_menu_screen_menu"]

[connection signal="next" from="success_screen" to="." method="_on_menu_screen_next"]

[connection signal="pause" from="success_screen" to="." method="_on_menu_screen_pause"]

[connection signal="restart" from="success_screen" to="." method="_on_menu_screen_restart"]


